--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
+gradle/wrapper/gradle-wrapper.jar
+gradle/wrapper/gradle-wrapper.properties
+gradlew.bat
+src/main/java/org/example/Main.java
+
+
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
